--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "FINAL_PROJECT"]
-	path = FINAL_PROJECT
-	url = https://www.github.com/PLLima/FirstPerson-TowerDefense
+[submodule "ThirdPerson-TowerDefense"]
+	path = ThirdPerson-TowerDefense
+	url = https://github.com/PLLima/ThirdPerson-TowerDefense
